--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,2 +1,6 @@
+engine-strict=false
 legacy-peer-deps=true
-engine-strict=false 
+strict-peer-dependencies=false
+auto-install-peers=true
+node-linker=hoisted
+use-npm=true 
