--- a/frontend_backup/package.json
+++ b/frontend_backup/package.json
@@ -1,36 +1,30 @@
 {
-  "name": "frontend",
+  "name": "@uos-weth/frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@privy-io/react-auth": "1.50.1",
     "@privy-io/wagmi-connector": "^0.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@rainbow-me/rainbowkit": "^1.3.6",
-    "@solana/spl-token": "^0.3.11",
-    "@solana/wallet-adapter-base": "^0.9.24",
-    "@solana/wallet-adapter-react": "^0.15.36",
-    "@solana/wallet-adapter-react-ui": "^0.9.36",
-    "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.98.0",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.67.3",
     "@types/three": "^0.174.0",
     "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^1.3.9",
     "@web3modal/wagmi": "^3.5.7",
     "autoprefixer": "^10.4.17",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "postcss": "^8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "three": "^0.174.0",
     "viem": "^1.21.4",
@@ -41,16 +35,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.1.0",
     "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=18.17.0"
-  },
-  "resolutions": {
-    "@privy-io/react-auth": "1.50.1",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
   }
 }
